updateadded background text

--- a/css/style.css
+++ b/css/style.css
@@ -6,35 +6,31 @@ html {
 }
 body {
 	background-color: LightGray;
+	font-family: 'Roboto', sans-serif;
+	-webkit-font-smoothing: antialiased;
 }
-
-div {
-	border: 1px solid Chocolate;
+.content {
+	width: 970px;
+	margin: 0 auto;
+	padding: 0px 15px;
 }
-
 /* Navigation Section */
 .top-navigation {
 	background-color: #fff;
 }
-.top-navigation .content {
-	width: 970px;
+.top-navigation > .content {
 	height: 70px;
-	margin: 0 auto;
-	padding: 0px 15px;
 }
 .top-navigation .links .active {
 	color: #4c5058;
 	font-weight: 500;
 }
-
 .top-navigation .links {
 	float: right;
-	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	color: #838994;
 	margin-top: 25px;
 	letter-spacing: 0.03em;
-	-webkit-font-smoothing: antialiased;
 }
 .top-navigation .links li {
 	display: inline-block;
@@ -43,4 +39,18 @@ div {
 .top-navigation .links li:hover {
 	cursor: pointer;
 	color: #333333;
+}
+/* Introduction Section */
+.introduction {
+	background-image: url('../images/first-background.jpg');
+	background-position: center bottom;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 595px;
+}
+.introduction h1,
+.introduction h3 {
+	color: white;
+	text-align: center;
+	font-weight: 300;
 }
