--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,15 @@ button:hover {
 	border-color: #cf3d0e;
 	cursor: pointer;
 }
+/* Three Case Images*/
+.cases .content {
+	margin-top: 7.875rem;
+	padding: none;
+	color: #1d1e21;
+	text-align: center;
+}
+.cases h2 {
+	font-size: 2.75rem;
+	margin: 1.625rem 0 3.125rem;
+	font-weight: 300;
+}
