--- a/css/style.css
+++ b/css/style.css
@@ -86,14 +86,28 @@ button:hover {
 	cursor: pointer;
 }
 /* Three Case Images*/
+.cases {
+	background-color: #fff;
+	overflow: hidden;
+	padding-bottom: 5rem;
+}
 .cases .content {
 	margin-top: 7.875rem;
 	padding: none;
 	color: #1d1e21;
 	text-align: center;
 }
+.cases .devices > li {
+	width: 33.3333333%;
+	float: left;
+}
 .cases h2 {
 	font-size: 2.75rem;
 	margin: 1.625rem 0 3.125rem;
 	font-weight: 300;
+}
+.cases .devices h3 {
+	font-weight: 400;
+	font-size: 1.563rem;
+	margin: 2.5rem 0px 1/875rem;
 }
