--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,21 @@
-html {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 	box-sizing: border-box;
 }
 *, *:before, *:after {
@@ -19,10 +36,14 @@ body {
 	background-color: #fff;
 	position: fixed;
 	width: 100%;
+	border-bottom: 1px solid #DDD;
 	z-index: 9999;
 }
 .top-navigation > .content {
-	height: 70px;
+	height: 4.375rem;
+}
+.top-navigation .logo {
+	height: 4.375rem;
 }
 .top-navigation .links .active {
 	color: #4c5058;
@@ -30,14 +51,13 @@ body {
 }
 .top-navigation .links {
 	float: right;
-	font-size: 16px;
+	font-size: 1.04rem;
 	color: #838994;
-	margin-top: 25px;
-	letter-spacing: 0.03em;
+	margin-top: 1.7rem;
 }
 .top-navigation .links li {
 	display: inline-block;
-	margin-left: 25px;
+	margin-left: 1.563rem;
 }
 .top-navigation .links li:hover {
 	cursor: pointer;
@@ -113,4 +133,43 @@ button:hover {
 	font-weight: 400;
 	font-size: 1.563rem;
 	margin: 2.5rem 0px 1/875rem;
+}
+/* Footer */
+.social {
+	background-color: #fff;
+	overflow: auto;
+	padding-bottom: 9.375rem;
+	text-align: center;
+}
+.social hr {
+	border: 0;
+	border-top: 1px solid #eaebec;
+	margin: 1.313rem 0;
+}
+.social .icons > li {
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0;
+	text-align: center;
+}
+.social .icons > li:hover {
+	cursor: pointer;
+}
+.social .twitter {
+	color: #55acee;
+}
+.social .facebook {
+	color: #4c66a4;
+}
+.social .instagram {
+	color: #3f729b;
+}
+.social .copy {
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: #838994;
 }
